# clap-noun-verb

./: .cursorrules  .editorconfig  .gitignore  ADVANCED_CAPABILITIES.md  API_SPECIFICATION.md  AUTONOMIC.md  CHANGELOG.md  CLAUDE.md  CNV_2028_INNOVATIONS.md  CNV_4.1.0_GUIDE.md  CNV_PHASES_COMPLETE.md  CNV_SWARM_INNOVATIONS.md  CONSOLIDATION_ANALYSIS_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  DAY_1_EXECUTION_SUMMARY.md  FINAL_COMMIT_SUMMARY.md  GGEN.md  HARDENING_SUMMARY.md  HIVE_QUEEN_VALIDATION_SUMMARY.md  INDEX_v4.0.0.md  IO_INTEGRATION_ROADMAP.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFESTO.md  MIGRATION_v3_to_v4.md  Makefile.toml  NOMRG.md  PERFORMANCE_VALIDATION_INDEX.md  PHILOSOPHY.md  PLUGIN_IMPLEMENTATION_GUIDE.md  PROJECT_SETUP.md  PhD_THESIS.md  READING_GUIDE.md  README.md  README_STANDALONE.md  README_v4.0.0_RELEASE.txt  RELEASE_CHECKLIST.md  RELEASE_NOTES_v4.0.0.md  (+33 more)
.cargo/: config.toml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  WORKFLOWS_SUMMARY.md  WORKFLOW_REFACTORING_REPORT.md  WORKFLOW_VALIDATION_REPORT.md
.hive-mind/: hive.db
.lh/: .cursorrules.json  CHANGELOG.md.json  CONTRIBUTING.md.json  Cargo.toml.json  Makefile.toml.json  README.md.json  RELEASE_CHECKLIST.md.json
.swarm/: memory.db
benches/: AGENT_CLI_JTBD_RESULTS.md  PERFORMANCE_METHODOLOGY.md  README.md  agent_cli_generation.rs  agent_cli_jtbd.rs  agents_benchmarks.rs  code_generator_bench.rs  config_startup_benchmarks.rs  discovery_engine_benchmarks.rs  frontier_benchmarks.rs  graph_benchmarks.rs  hot_path_benchmarks.rs  io_performance_benchmarks.rs  mcp_workflow_bench.rs  phase1_foundation_benchmarks.rs  phase2_rdf_benchmarks.rs  phase3_optimization_benchmarks.rs  phase4_advanced_benchmarks.rs  sparql_executor_bench.rs  turtle_parser_bench.rs  v4_system_benchmarks.rs  wizard_benchmarks.rs  wizard_v2_micro_benchmarks.rs
clap-noun-verb-macros/: Cargo.toml  Makefile.toml
clap-noun-verb-macros/src/: io_detection.rs  lib.rs  meta_framework.rs  rdf_generation.rs  telemetry_validation.rs  validation.rs
clap-noun-verb-macros/src/macros/: economic_simulation.rs  executable_specs.rs  federated_network.rs  fractal_patterns.rs  learning_trajectories.rs  mod.rs  reflexive_testing.rs  reflexive_testing_macro.rs  semantic_composition.rs
docs/: ADVANCED_FEATURES_GUIDE.md  ADVANCED_TYPE_STATE_PATTERNS.md  ANDON-SYSTEM-SUMMARY.md  ARCHITECTURE_GAP_ANALYSIS.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_REVIEW_V4.md  ARG_ATTRIBUTES.md  ARXIV_SUBMISSION_METADATA.md  AUTONOMIC_AUDIT_REPORT.md  CAPABILITY_DISCOVERY_ENGINE_ARCHITECTURE.md  CAPABILITY_DISCOVERY_ENGINE_QUICKSTART.md  (+214 more)
docs/archive/examples/domain-separation/api-client/: Cargo.toml  README.md
docs/archive/examples/domain-separation/api-client/src/cli/: commands.rs
docs/archive/examples/domain-separation/api-client/src/domain/: client.rs
docs/archive/examples/domain-separation/template/: Cargo.toml
docs/archive/examples/domain-separation/template/src/domain/: logic.rs  mod.rs
docs/examples/domain-separation/data-processor/: Cargo.toml  README.md
docs/examples/domain-separation/data-processor/src/cli/: commands.rs  mod.rs
docs/examples/domain-separation/data-processor/src/domain/: transform.rs
docs/examples/domain-separation/report-generator/: Cargo.toml  README.md
docs/examples/domain-separation/report-generator/src/cli/: commands.rs  mod.rs
docs/examples/domain-separation/report-generator/src/domain/: report.rs
examples/playground/: ABSTRACTION.md  ARXIV_GENERATOR.md  ARXIV_SUMMARY.md  Cargo.toml  GUIDE.md  LEAN_80_20.md  PLAYGROUND_OVERVIEW.md  PRD.md  RDF_MCP_INTEGRATION.md  README.md  SUMMARY.md  arxiv_paper_generator.rs  auto_noun.rs  claude_md_config_cli.rs  false_positive_recovery_demo.rs  minimal_test.rs  rdf_interactive_playground.rs  rdf_mcp_core.rs  rdf_mcp_lean.rs  rdf_mcp_server.rs  rdf_oxigraph_sparql.rs  semantic_cli_hello_world.rs  semantic_submissions.rs  telemetry_validation.rs  thesis_rdf_mcp_80_20.rs  tutorial-failure-scenarios.md
examples/playground/.github/workflows/: ci.yml
examples/playground/docs/: CRITICAL_FIXES.md  PLAYGROUND_SYNTHESIS.md  RELEASE_AUTOMATION_GUIDE.md  TESTING_STRATEGY.md
examples/playground/output/: contribution-paper.tex  dsr-paper.tex  monograph-paper.tex  narrative-paper.tex  papers-paper.tex
examples/playground/src/: main.rs  outputs.rs
examples/playground/src/commands/: config.rs  meta.rs  mod.rs  papers.rs  thesis.rs
examples/playground/src/domain/: completions.rs  middleware.rs  mod.rs  ontology.rs  papers.rs  telemetry.rs  thesis.rs
examples/playground/src/integration/: io.rs
examples/playground/templates/: imrad.tex.tera  monograph.tex.tera  paper.tex.tera
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_capability_parser.rs  fuzz_certificate_serialization.rs  fuzz_delegation_chain.rs  fuzz_graph_operations.rs  fuzz_zero_copy_parser.rs
playground/: Cargo.toml  HTF_README.md  MAXIMAL_IMPLEMENTATION_REPORT.md  README.md
playground/docs/: DOCUMENTATION_PLAN.md  IMPROVEMENT_ROADMAP.md  INDEX.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  TESTING_EXPANSION_PLAN.md  ggen_migration.md
playground/examples/: ggen_quickstart.rs
playground/output/: argument-paper.tex  dsr-paper.tex  imrad-paper.tex
playground/scripts/: pre-commit.sh
playground/src/: main.rs  outputs.rs
playground/src/commands/: capability.rs  config.rs  doctor.rs  meta.rs  mod.rs  pack.rs  papers.rs  policy.rs  receipt.rs  registry.rs  sync.rs  thesis.rs
playground/src/domain/: capability.rs  completions.rs  config.rs  doctor.rs  formats.rs  introspection.rs  middleware.rs  mod.rs  ontology.rs  pack.rs  papers.rs  policy.rs  receipt.rs  receipt_test.rs  research_thesis.rs  sync.rs  telemetry.rs  thesis.rs
playground/src/integration/: lockfile.rs  mod.rs  rdf.rs  receipt_store.rs  registry_client.rs  templates.rs  workspace.rs
playground/templates/: argument.tex.tera  contribution.tex.tera  defense_outline.md.tera  dsr.tex.tera  narrative.tex.tera  presentation.tex.tera
playground/tests/: cli_v5_features.rs  ggen_integration.rs  receipt_verification_test.rs
(+973 files in other folders)
