[package]
name = "clap-noun-verb"
version = "4.0.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
authors = ["Sean Chatman <seanchatmangpt@gmail.com>"]
repository = "https://github.com/seanchatmangpt/clap-noun-verb"
documentation = "https://docs.rs/clap-noun-verb"
homepage = "https://github.com/seanchatmangpt/clap-noun-verb"
description = "A high-level, ergonomic API for building noun-verb CLI patterns on top of clap with kernel capabilities for deterministic, agent-grade CLIs"
keywords = ["cli", "clap", "noun-verb", "command-line", "typer"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "clap_noun_verb"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "suggestions"] }
clap_complete = "4.5"
clap_mangen = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
async-trait = "0.1"
tokio-stream = "0.1"
linkme = "0.3"
clap-noun-verb-macros = { version = "4.0.0", path = "clap-noun-verb-macros" }
regex = "1.10"
url = "2.5"
once_cell = "1.19"
atty = "0.2"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
parking_lot = "0.12"

# New in v4.0 - I/O Integration
clio = { version = "0.3", features = ["clap-parse"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
lazy_static = "1.4"

# New in v4.1 - Async I/O and advanced features
tokio = { version = "1.40", features = ["io-util", "net", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.7"
pin-project = "1.1"
futures = "0.3"

[dev-dependencies]
anyhow = "1.0"
cargo-make = "0.37"
chicago-tdd-tools = { version = "1.0.0", features = ["testing-extras"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
insta = { version = "1.0", features = ["json", "yaml"] }
loom = "0.7"

# New in v4.0 - CLI Testing
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.0"

[workspace.metadata.make]
# Cargo-make configuration
verbose = false

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "services"
path = "examples/services.rs"

[[example]]
name = "collector"
path = "examples/collector.rs"

[[example]]
name = "arguments"
path = "examples/arguments.rs"

[[example]]
name = "framework"
path = "examples/framework.rs"

[[example]]
name = "nested"
path = "examples/nested.rs"

[[example]]
name = "attribute_macro"
path = "examples/attribute_macro.rs"

[[example]]
name = "validation"
path = "examples/validation.rs"

[[example]]
name = "env_vars"
path = "examples/env_vars.rs"

[[example]]
name = "positional"
path = "examples/positional.rs"

[[example]]
name = "arg_actions"
path = "examples/arg_actions.rs"

[[example]]
name = "arg_groups"
path = "examples/arg_groups.rs"

[[example]]
name = "async_example"
path = "examples/async_example.rs"

[[example]]
name = "context_example"
path = "examples/context_example.rs"

[[example]]
name = "format_example"
path = "examples/format_example.rs"

[[example]]
name = "deprecation_example"
path = "examples/deprecation_example.rs"

[[example]]
name = "completion_example"
path = "examples/completion_example.rs"

[[example]]
name = "autonomic_example"
path = "examples/autonomic_example.rs"

[[example]]
name = "cnv4_example"
path = "examples/cnv4_example.rs"

[[example]]
name = "io_basic"
path = "examples/io_basic.rs"

[[example]]
name = "io_advanced"
path = "examples/io_advanced.rs"

[[example]]
name = "async_io_example"
path = "examples/async_io_example.rs"

[package.metadata.docs.rs]
# docs.rs build configuration
# All features are enabled by default for documentation
# If you add features in the future, list them here:
# features = ["feature1", "feature2"]
# rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
# Core team best practices - deny unsafe patterns
unsafe_code = "deny"
bare_trait_objects = "warn"

[lints.clippy]
# Error handling - never use unwrap or expect in production
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
exit = "deny"

# Code quality (all at lower priority to allow specific overrides)
all = { level = "warn", priority = -1 }

# Best practices
redundant_pattern_matching = "warn"
unnecessary_wraps = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
cognitive_complexity = "warn"

[[bench]]
name = "hot_path_benchmarks"
harness = false

[[bench]]
name = "graph_benchmarks"
harness = false

[[bench]]
name = "v4_system_benchmarks"
harness = false

[[bench]]
name = "io_performance_benchmarks"
harness = false

[[bench]]
name = "config_startup_benchmarks"
harness = false
