[workspace]
# Exclude standalone playground CLI (uses published crates.io version)
exclude = ["playground"]

[package]
name = "clap-noun-verb"
version = "5.3.3"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
authors = ["Sean Chatman <seanchatmangpt@gmail.com>"]
repository = "https://github.com/seanchatmangpt/clap-noun-verb"
documentation = "https://docs.rs/clap-noun-verb"
homepage = "https://github.com/seanchatmangpt/clap-noun-verb"
description = "A high-level, ergonomic API for building noun-verb CLI patterns on top of clap with kernel capabilities for deterministic, agent-grade CLIs"
keywords = ["cli", "clap", "noun-verb", "command-line", "typer"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "clap_noun_verb"
path = "src/lib.rs"

[features]
# Default features - truly minimal for basic noun-verb CLI (10 dependencies)
# Telemetry is now optional - add "autonomic" feature if you need it
default = []

# Full feature set - all optional modules enabled
full = ["async", "io", "crypto", "observability", "validators", "agent2028", "rdf", "kernel", "autonomic", "completions", "mangen", "config-formats", "templates", "caching", "concurrency"]

# Async runtime support (tokio, futures)
async = ["dep:tokio", "dep:tokio-stream", "dep:tokio-util", "dep:futures", "dep:async-trait"]

# Advanced I/O with clio
io = ["dep:clio", "dep:bytes", "dep:pin-project", "async"]

# Cryptographic hashing (sha2, sha3, blake3)
crypto = ["dep:sha2", "dep:sha3", "dep:blake3", "dep:hex"]

# Observability (tracing)
observability = ["dep:tracing", "dep:tracing-subscriber"]

# URL and regex validators
validators = ["dep:regex", "dep:url"]

# Agent2028 trillion-agent ecosystem (v5.0+)
agent2028 = ["async", "crypto", "dep:chrono", "dep:uuid", "dep:rand"]

# RDF/Ontology Control Layer with MCP
rdf = ["crypto", "dep:rmcp", "dep:schemars"]

# Kernel capabilities (deterministic execution, receipts)
kernel = ["crypto", "async", "dep:uuid", "dep:parking_lot"]

# Autonomic CLI layer (introspection, hot-path, telemetry)
# Required by #[verb] macro - includes minimal deps for telemetry
autonomic = ["crypto", "dep:crossbeam", "dep:parking_lot", "dep:uuid", "dep:chrono"]

# Concurrency primitives
concurrency = ["dep:crossbeam", "dep:parking_lot"]

# Caching support
caching = ["dep:lru", "dep:ahash"]

# Template engine (handlebars)
templates = ["dep:handlebars"]

# Configuration formats (yaml, toml)
config-formats = ["dep:serde_yaml", "dep:toml"]

# Shell completion generation
completions = ["dep:clap_complete"]

# Man page generation
mangen = ["dep:clap_mangen"]

# =============================================================================
# CORE DEPENDENCIES - Always required (MINIMAL for basic noun-verb CLI)
# =============================================================================

[dependencies]
# CLI Framework (REQUIRED - this is what we wrap)
clap = { version = "4.5", features = ["derive", "env", "suggestions"] }
clap-noun-verb-macros = { version = "5.3.3", path = "clap-noun-verb-macros" }

# Auto-discovery (REQUIRED - distributed slices for #[noun]/#[verb])
linkme = "0.3"

# Serialization (REQUIRED - JSON output is fundamental)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling (REQUIRED - Result types)
thiserror = "1.0"
anyhow = "1.0"

# Utilities (REQUIRED - lazy initialization)
once_cell = "1.19"
lazy_static = "1.4"
atty = "0.2"

# =============================================================================
# OPTIONAL DEPENDENCIES - Feature-gated for minimal compile burden
# =============================================================================

# Shell completion generation (optional)
clap_complete = { version = "4.5", optional = true }

# Man page generation (optional)
clap_mangen = { version = "0.2", optional = true }

# Configuration formats (optional)
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

# Async runtime (optional - for async handlers)
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.40", features = ["io-util", "net", "rt", "sync", "time"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
futures = { version = "0.3", optional = true }

# Advanced I/O (optional - for clio integration)
clio = { version = "0.3", features = ["clap-parse"], optional = true }
bytes = { version = "1.7", optional = true }
pin-project = { version = "1.1", optional = true }

# Validators (optional - for URL/regex validation)
regex = { version = "1.10", optional = true }
url = { version = "2.5", optional = true }

# Cryptography (optional - for receipts/hashing)
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
blake3 = { version = "1.5", optional = true }
hex = { version = "0.4", optional = true }

# Data types (optional - for agent2028)
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
rand = { version = "0.8", optional = true }

# Concurrency (optional - for kernel/autonomic)
crossbeam = { version = "0.8", optional = true }
parking_lot = { version = "0.12", optional = true }

# Observability (optional - for telemetry)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"], optional = true }

# MCP Integration (optional - for rdf module)
rmcp = { version = "0.9", features = ["server", "macros"], optional = true }
schemars = { version = "0.8", features = ["uuid", "chrono"], optional = true }

# Template engine (optional - for advanced help)
handlebars = { version = "5.1", optional = true }

# Caching (optional - for hot-path optimization)
lru = { version = "0.12", optional = true }
ahash = { version = "0.8", optional = true }

# =============================================================================
# DEV DEPENDENCIES - For tests, examples, and benchmarks
# =============================================================================

[dev-dependencies]
# Testing frameworks
cargo-make = "0.37"
chicago-tdd-tools = { version = "1.0.0", features = ["testing-extras"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
insta = { version = "1.0", features = ["json", "yaml"] }
loom = "0.7"

# CLI testing
assert_cmd = "2.0"
predicates = "3.0"
assert_fs = "1.0"

# Async testing
tokio-test = "0.4"
serial_test = "3.0"
tempfile = "3.8"

# RDF/SPARQL for playground examples (NOT used in library)
oxigraph = "0.5.1"

[workspace.metadata.make]
# Cargo-make configuration
verbose = false

# =============================================================================
# TUTORIAL EXAMPLES - Learning-oriented, step-by-step guides
# =============================================================================

[[example]]
name = "tutorial_basic"
path = "examples/tutorial/basic.rs"

[[example]]
name = "tutorial_arguments"
path = "examples/tutorial/arguments.rs"

[[example]]
name = "tutorial_positional"
path = "examples/tutorial/positional.rs"

[[example]]
name = "tutorial_services"
path = "examples/tutorial/services.rs"

# =============================================================================
# HOW-TO EXAMPLES - Task-oriented problem solving
# =============================================================================

[[example]]
name = "howto_arg_groups"
path = "examples/howto/arg_groups.rs"

[[example]]
name = "howto_validation"
path = "examples/howto/validation.rs"

[[example]]
name = "howto_env_vars"
path = "examples/howto/env_vars.rs"

[[example]]
name = "howto_arg_actions"
path = "examples/howto/arg_actions.rs"

[[example]]
name = "howto_deprecation"
path = "examples/howto/deprecation.rs"

# =============================================================================
# REFERENCE EXAMPLES - Complete API demonstrations
# =============================================================================

[[example]]
name = "ref_attribute_macro"
path = "examples/reference/attribute_macro.rs"

[[example]]
name = "ref_framework"
path = "examples/reference/framework.rs"

[[example]]
name = "ref_nested"
path = "examples/reference/nested.rs"

[[example]]
name = "ref_collector"
path = "examples/reference/collector.rs"

[[example]]
name = "ref_format"
path = "examples/reference/format.rs"

[[example]]
name = "ref_context"
path = "examples/reference/context.rs"

# =============================================================================
# ADVANCED EXAMPLES - Expert-level production patterns (require --all-features)
# =============================================================================
# Advanced examples disabled in default build due to feature dependencies.
# Build with: cargo build --example NAME --all-features

# =============================================================================
# PLAYGROUND EXAMPLES - Experimental RDF/MCP features (DISABLED - missing deps)
# =============================================================================
# All playground examples require optional features (rdf, agent2028, autonomic)
# that are not in default build. Enable with: cargo build --example NAME --all-features

[package.metadata.docs.rs]
# docs.rs build configuration - enable all features for documentation
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
# Core team best practices - deny unsafe patterns
unsafe_code = "deny"
bare_trait_objects = "warn"
# Allow kani cfg condition for formal verification (optional external tool)
# Also allow docsrs for documentation build
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(docsrs)'] }
# Allow dead code for v5.1 feature placeholders
dead_code = "allow"
# Allow async fn in traits (stable in Rust 1.75+)
async_fn_in_trait = "allow"

[lints.clippy]
# Error handling - never use unwrap or expect in production
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
exit = "deny"

# Code quality (all at lower priority to allow specific overrides)
all = { level = "warn", priority = -1 }

# Best practices
redundant_pattern_matching = "warn"
unnecessary_wraps = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
large_enum_variant = "allow"
# Allow common patterns for v5.0
derivable_impls = "allow"
type_complexity = "allow"
collapsible_if = "allow"
match_like_matches_macro = "allow"
manual_map = "allow"
manual_strip = "allow"
needless_question_mark = "allow"
assign_op_pattern = "allow"
should_implement_trait = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
unwrap_or_default = "allow"
single_match = "allow"
useless_vec = "allow"
useless_format = "allow"
unnecessary_to_owned = "allow"
extend_with_drain = "allow"
io_other_error = "allow"
map_identity = "allow"
map_flatten = "allow"
manual_clamp = "allow"
needless_match = "allow"
iter_on_single_items = "allow"
new_without_default = "allow"
filter_map_identity = "allow"
doc_lazy_continuation = "allow"
for_kv_map = "allow"
unnecessary_map_or = "allow"

[[bench]]
name = "hot_path_benchmarks"
harness = false

[[bench]]
name = "graph_benchmarks"
harness = false

[[bench]]
name = "v4_system_benchmarks"
harness = false

[[bench]]
name = "io_performance_benchmarks"
harness = false

[[bench]]
name = "config_startup_benchmarks"
harness = false
