[package]
name = "data-processor-example"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"

[[bin]]
name = "data-processor"
path = "src/main.rs"
